--- a/index.html
+++ b/index.html
@@ -19,117 +19,135 @@
           <img src="./assets/img/logo.svg" alt="Logo Epicode" height="60" />
 
           <p>Epicode - Il blog dei developers</p>
+          <div class="header-spacing">
+            <div><a href="#">&rArr; Home &lArr;</a></div>
 
-          <div><a href="#">&rArr; Home &lArr;</a></div>
+            <div><a href="#">&rArr; Articoli &lArr;</a></div>
 
-          <div><a href="#">&rArr; Articoli &lArr;</a></div>
-
-          <div><a href="#">&rArr; Lavora con noi &lArr;</a></div>
+            <div><a href="#">&rArr; Lavora con noi &lArr;</a></div>
+          </div>
         </nav>
       </header>
-      <main class="main-style">
-        <h1>Come creare un template per i post</h1>
-        <h4>di Mario Rossi - pubblicato il 25-10-2020</h4>
-        <article>
-          La prima cosa da fare e' suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a
-          tutte le pagine
-          <br />
-          <p>Le varie aree saranno quindi suddivise in</p>
-          <ul>
-            <li>Contenuti di intestazione del tag &lsaquo;header&rsaquo;</li>
-            <li>Contenuti centrali variabili del tag &lsaquo;main&rsaquo; (corpo principale)</li>
-            <li>Contenuti di fine pagina comuni, da inserire nel tag &lsaquo;footer&rsaquo;</li>
-          </ul>
-        </article>
-        <article>
-          <p>Formattazione del codice</p>
-          Il testo dell' articolo dovra' essere formattato per identificare tutte le parti da selezionare con i CSS.
-          Percio' i passi saranno:
-          <ol>
-            <li>Progettare il markup assegnando ad ogni specifico testo il tag appropriato</li>
-            <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
-            <li>Applicare gli stili CSS</li>
-          </ol>
-          L'applicazione di stili CSS e' cresciuta negli anni fino a raggiungere la diffusione pressoche' totale
-          <p>Diffusione dei CSS</p>
-          <table>
-            <tr>
-              <td>Anno</td>
-              <td>% di utilizzo</td>
-              <td>Supporto Browsers</td>
-            </tr>
-            <tr>
-              <td>2000</td>
-              <td>20%</td>
-              <td>17%</td>
-            </tr>
-            <tr>
-              <td>2002</td>
-              <td>35%</td>
-              <td>22%</td>
-            </tr>
-            <tr>
-              <td>2004</td>
-              <td>45%</td>
-              <td>42%</td>
-            </tr>
-            <tr>
-              <td>2008</td>
-              <td>80%</td>
-              <td>51%</td>
-            </tr>
-            <tr>
-              <td>2012</td>
-              <td>100%</td>
-              <td>76%</td>
-            </tr>
-          </table>
-          <br />
-          Un test di validazione potra' essere fatto tramite il tool online <a href="#">debugger</a> dedicato allo
-          scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri
-          developers come loro:
-          <hr />
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/w_NqMcNOtxw"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </article>
+      <main>
+        <div class="mainA">
+          <div class="mainB">
+            <h1 class="title">Come creare un template per i post</h1>
+            <h4>
+              <i class="fas fa-pen-square"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020
+            </h4>
+            <article>
+              La prima cosa da fare e' suddividere in blocchi logici la pagina, identificando le parti comuni da
+              applicare a tutte le pagine
+              <br />
+              <p>Le varie aree saranno quindi suddivise in</p>
+              <ul>
+                <li>Contenuti di intestazione del tag <span class="encased">&lsaquo;header&rsaquo;</span></li>
+                <li>
+                  Contenuti centrali variabili del tag
+                  <span class="encased">&lsaquo;main&rsaquo;</span> (corpo principale)
+                </li>
+                <li>
+                  Contenuti di fine pagina comuni, da inserire nel tag
+                  <span class="encased">&lsaquo;footer&rsaquo;</span>
+                </li>
+              </ul>
+            </article>
+            <article>
+              <p>
+                Formattazione del codice <br />
+                Il testo dell' articolo dovra' essere formattato per identificare tutte le parti da
+                <span class="purple-strong"> selezionare con i CSS.</span>
+                Percio' i passi saranno:
+              </p>
+              <ol>
+                <li>Progettare il markup assegnando ad ogni specifico testo il tag appropriato</li>
+                <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+                <li>Applicare gli stili CSS</li>
+              </ol>
+              <p>
+                L'applicazione di stili CSS e' cresciuta negli anni fino a raggiungere la diffusione pressoche' totale
+              </p>
+              <p>Diffusione dei CSS</p>
+              <table>
+                <tr>
+                  <td>Anno</td>
+                  <td>% di utilizzo</td>
+                  <td>Supporto Browsers</td>
+                </tr>
+                <tr>
+                  <td>2000</td>
+                  <td>20%</td>
+                  <td>17%</td>
+                </tr>
+                <tr>
+                  <td>2002</td>
+                  <td>35%</td>
+                  <td>22%</td>
+                </tr>
+                <tr>
+                  <td>2004</td>
+                  <td>45%</td>
+                  <td>42%</td>
+                </tr>
+                <tr>
+                  <td>2008</td>
+                  <td>80%</td>
+                  <td>51%</td>
+                </tr>
+                <tr>
+                  <td>2012</td>
+                  <td>100%</td>
+                  <td>76%</td>
+                </tr>
+              </table>
+              <br />
+              Un test di validazione potra' essere fatto tramite il tool online <a href="#">debugger</a> dedicato allo
+              scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri
+              developers come loro:
+              <hr />
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/w_NqMcNOtxw"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </article>
 
-        <p>Vuoi rimanere aggiornato su altre novita' del blog? iscriviti alla nostra newsletter:</p>
-        <form action="" method="get">
-          <div>
-            <label for="email">Inserisci l'email </label>
-            <input type="email" name="email" id="email" required placeholder="Email" />
+            <p>Vuoi rimanere aggiornato su altre novita' del blog? iscriviti alla nostra newsletter:</p>
+            <form action="" method="get">
+              <div>
+                <label for="email">Inserisci l'email </label>
+                <input type="email" name="email" id="email" required placeholder="Email" />
+              </div>
+              <div>
+                <input type="submit" value="Iscriviti!" />
+              </div>
+            </form>
+            <hr />
+            <section>
+              <p>Articoli correlati</p>
+              <div>
+                <a href="#">Validare il codice HTML</a>
+                <p>Categoria: develop</p>
+                <p>Data: 18-9-2020</p>
+              </div>
+              <div>
+                <a href="#">Correggere la sintassi</a>
+                <p>Categoria: develop</p>
+                <p>Data: 16-9-2020</p>
+              </div>
+              <div>
+                <a href="#">Meno kb nella pagina</a>
+                <p>Categoria: ottimizzazione</p>
+                <p>Data: 30-9-2020</p>
+              </div>
+              <hr />
+            </section>
           </div>
-          <div>
-            <input type="submit" value="Iscriviti!" />
-          </div>
-        </form>
-        <hr />
-        <section>
-          <p>Articoli correlati</p>
-          <div>
-            <a href="#">Validare il codice HTML</a>
-            <p>Categoria: develop</p>
-            <p>Data: 18-9-2020</p>
-          </div>
-          <div>
-            <a href="#">Correggere la sintassi</a>
-            <p>Categoria: develop</p>
-            <p>Data: 16-9-2020</p>
-          </div>
-          <div>
-            <a href="#">Meno kb nella pagina</a>
-            <p>Categoria: ottimizzazione</p>
-            <p>Data: 30-9-2020</p>
-          </div>
-          <hr />
-        </section>
+        </div>
       </main>
       <footer>
         <p>Blog Epicode &#169;2023</p>
